(Hopefully) Fixed bug [ 1557015 ] Debugger could not start web server